[package]
name = "rutenspitz-examples"
version = "0.1.2"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"
license = "MIT"

[[bin]]
name = "binary_heap"
path = "src/binary_heap.rs"

[[bin]]
name = "btree_map"
path = "src/btree_map.rs"

[[bin]]
name = "hash_map"
path = "src/hash_map.rs"

[[bin]]
name = "index_map"
path = "src/index_map.rs"

[[bin]]
name = "linked_hash_map"
path = "src/linked_hash_map.rs"

[[bin]]
name = "url"
path = "src/url.rs"

[[bin]]
name = "vec"
path = "src/vec.rs"

[[bin]]
name = "borrow"
path = "src/borrow.rs"

[dependencies]
ahash = "0.6"
arbitrary = "0.4.5"
better-panic = "0.2"
hashbrown = "0.9"
honggfuzz = "0.5"
indexmap = "1.6"
linked-hash-map = "0.5"
rutenspitz = { path = "../lib" }
url = "2.2"
