[package]
name = "rutenspitz"
description = "А procedural macro to be used for testing/fuzzing stateful models against a semantically equivalent but obviously correct implementation"
version = "0.2.1"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["fuzzing", "test", "honggfuzz"]
repository = "https://github.com/jakubadamw/rutenspitz"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
lazy_static = "1"
rutenspitz_macro = { version = "0.2.1", path = "../proc_macro" }
strum_macros = "0.24"
